--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -5,16 +5,17 @@
 
 
 		<div class="col-9 ms-3">
-			<h1 class="text-center mt-2">지원자 북마크</h1>
+			<h1 class="text-center mt-2">이력서 북마크</h1>
 
 
 
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>지원자 A</div>
+					<div>이력서 A</div>
 				</div>
 				<div class="">
+					<button type="button" class="btn btn-warning">이력서 보기</button>
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -24,9 +25,10 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>지원자 B</div>
+					<div>이력서 B</div>
 				</div>
 				<div class="">
+					<button type="button" class="btn btn-warning">이력서 보기</button>
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -36,9 +38,10 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>지원자 C</div>
+					<div>이력서 C</div>
 				</div>
 				<div class="">
+					<button type="button" class="btn btn-warning">이력서 보기</button>
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
@@ -49,9 +52,10 @@
 			
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
 				<div class="">
-					<div>지원자 D</div>
+					<div>이력서 D</div>
 				</div>
 				<div class="">
+					<button type="button" class="btn btn-warning">이력서 보기</button>
 					<button type="button" class="btn btn-success">연락</button>
 					<button type="button" class="btn btn-danger">삭제</button>
 				</div>
