--- a/src/main/resources/templates/comp/joinForm.mustache
+++ b/src/main/resources/templates/comp/joinForm.mustache
@@ -10,7 +10,7 @@
 
 		<div class="mt-3"></div>
 
-		<form action="#" method="post" onsubmit="">
+		<form action="/comp/join" method="post" onsubmit="">
 			<div class="d-flex form-group mt-2 mb-2">
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email">
 				<button type="button" class="badge bg-secondary ms-2" onclick="">중복체크</button>
@@ -29,15 +29,19 @@
 			<div class="mt-4"></div>
 
 			<div class="mb-2">
-				<input type="tel" name="name" class="form-control" placeholder="회사명" id="name">
+				<input type="text" name="compname" class="form-control" placeholder="회사명" id="compname">
 			</div>
 
 			<div class="mb-2">
-				<input type="tel" name="tel" class="form-control" placeholder="사업자번호" id="tel">
+				<input type="text" name="compRegister" class="form-control" placeholder="사업자번호" id="compRegister">
 			</div>
 
 			<div class="mb-2">
-				<input type="tel" name="tel" class="form-control" placeholder="전화번호" id="tel">
+				<input type="text" name="address" class="form-control" placeholder="주소" id="address">
+			</div>
+			
+			<div class="mb-2">
+				<input type="text" name="tel" class="form-control" placeholder="전화번호" id="tel">
 			</div>
 
 			<div class="mt-4"></div>
