--- a/src/main/resources/templates/comp/recommend.mustache
+++ b/src/main/resources/templates/comp/recommend.mustache
@@ -18,32 +18,38 @@
 					<h4 class="mt-2 text-center">기술별</h4>
 	
 					<div class="form-check d-inline-block ms-3 me-2">
-						<input class="form-check-input" type="checkbox" id="" checked>
-						<label class="form-check-label">모두</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="checkbox" id="" checked>
+						모두</label>
 					</div>
 					
 					<hr class="m-1">
 					<div class="d-flex flex-wrap">
 	
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Java</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" id="">
+							Java</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">DB</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" id="">
+							DB</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">HTML / CSS</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" id="">
+							HTML / CSS</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">Python</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" id="">
+							Python</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="checkbox" id="">
-							<label class="form-check-label">JavaScript</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox" id="">
+							JavaScript</label>
 						</div>
 						
 					</div>
@@ -56,8 +62,9 @@
 					<h4 class="mt-2 text-center">직무별</h4>
 	
 					<div class="form-check d-inline-block ms-3 me-2">
-						<input class="form-check-input" type="radio" id="" name="radiobutton" checked>
-						<label class="form-check-label">모두</label>
+						<label class="form-check-label">
+							<input class="form-check-input" type="radio" id="" name="radiobutton" checked>
+						모두</label>
 					</div>
 	
 					<hr class="m-1">
@@ -65,36 +72,44 @@
 					<div class="d-flex flex-wrap">
 	
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">백엔드</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							백엔드</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">프런트엔드</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							프런트엔드</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">풀스택</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							풀스택</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">안드로이드</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							안드로이드</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">IOS</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							IOS</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">임베디드</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							임베디드</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">빅데이터</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							빅데이터</label>
 						</div>
 						<div class="form-check d-inline-block ms-3 me-2">
-							<input class="form-check-input" type="radio" id="" name="radiobutton">
-							<label class="form-check-label">서버</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" id="" name="radiobutton">
+							서버</label>
 						</div>
 	
 					</div>
