--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -1,12 +1,10 @@
 {{> layout/header}}
-{{> layout/comp2header}}
-
 <!-- 25번 -->
 
 
 
 
-		<div class="col-auto container">
+		<div class="col-auto container border border-info mb-2">
 			<h1 class="text-center mt-2">이력서 상세보기</h1>
 
 			<div class="d-flex">
@@ -67,5 +65,4 @@
 
 
 		
-{{> layout/comp2footer}}
 {{> layout/footer}}
