--- a/src/main/resources/templates/comp/noticeList.mustache
+++ b/src/main/resources/templates/comp/noticeList.mustache
@@ -9,84 +9,33 @@
 			<h1 class="text-center mt-2">공고관리</h1>
 
 			
-
-			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="/comp/notice/1" class="btn btn-info">
-					<div class="">
-						<span class="fw-bold">백엔드 개발자 모집합니다.</span>
-						<span class="badge bg-black">D-12</span>
-					</div>
-					<div class="mb-1">
-						<span class="badge bg-primary">Java</span>
-						<span class="badge bg-primary">DB</span>
-						<span class="badge bg-primary">Spring</span>
-					</div>
-					<div>
-						<span class="badge bg-success">신입</span>
-						<span class="badge bg-success">학력무관</span>
-						<span class="badge bg-success">경기도</span>
-					</div>
-				</a>
-
-				<div class="align-self-center">
-					<a href="/comp/notice/1/updateForm" class="btn btn-warning">수정하기</a>
-					<a href="/comp/notice/1/resumeList" class="btn btn-success">지원자 보기</a>
-				</div>
-			</div>
-			
-			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="/comp/notice/1" class="btn btn-info">
-					<div class="">
-						<span class="fw-bold">백엔드 개발자 모집합니다.</span>
-						<span class="badge bg-black">D-12</span>
-					</div>
-					<div class="mb-1">
-						<span class="badge bg-primary">Java</span>
-						<span class="badge bg-primary">DB</span>
-						<span class="badge bg-primary">Spring</span>
-					</div>
-					<div>
-						<span class="badge bg-success">신입</span>
-						<span class="badge bg-success">학력무관</span>
-						<span class="badge bg-success">경기도</span>
-					</div>
-				</a>
-
-				<div class="align-self-center">
-					<a href="/comp/notice/1/updateForm" class="btn btn-warning">수정하기</a>
-					<a href="/comp/notice/1/resumeList" class="btn btn-success">지원자 보기</a>
-				</div>
-			</div>
-
-			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="/comp/notice/1" class="btn btn-info">
-					<div class="">
-						<span class="fw-bold">백엔드 개발자 모집합니다.</span>
-						<span class="badge bg-black">D-12</span>
-					</div>
-					<div class="mb-1">
-						<span class="badge bg-primary">Java</span>
-						<span class="badge bg-primary">DB</span>
-						<span class="badge bg-primary">Spring</span>
-					</div>
-					<div>
-						<span class="badge bg-success">신입</span>
-						<span class="badge bg-success">학력무관</span>
-						<span class="badge bg-success">경기도</span>
-					</div>
-				</a>
-
-				<div class="align-self-center">
-					<a href="/comp/notice/1/updateForm" class="btn btn-warning">수정하기</a>
-					<a href="/comp/notice/1/resumeList" class="btn btn-success">지원자 보기</a>
-				</div>
-			</div>
-
 			
 
+			{{#postingList}}
+			<div class="d-flex border border-info m-3 p-2 justify-content-between">
+				<a href="/notice/{{id}}" class="btn btn-info">
+					<div class="">
+						<span class="fw-bold">{{position}}</span>
+						<span class="badge bg-black">D-{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
+					</div>
+					<div class="mb-1">
+						{{#postingSkill}}<span class="badge bg-primary me-1">{{skill}}</span>{{/postingSkill}}
+					</div>
+					<div>
+						{{#career}}<span class="badge bg-success">{{career}}</span>{{/career}}
+						{{#education}}<span class="badge bg-success">{{education}}</span>{{/education}}
+						<span class="badge bg-success">{{region}}</span>
+					</div>
+				</a>
 
+				<h3>{{title}}</h3>
 
-
+				<div class="align-self-center col-auto ms-1">
+					<a href="/comp/notice/{{id}}/updateForm" class="btn btn-warning">수정하기</a>
+					<a href="/comp/notice/{{id}}/resumeList" class="btn btn-success">지원자 보기</a>
+				</div>
+			</div>
+			{{/postingList}}
 
 
 
