--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -9,7 +9,7 @@
 			<div class="m-2"></div>
 			<a href="/comp/notice/saveForm" class="w-100 btn btn-info">공고 등록</a>
 			<div class="m-2"></div>
-			<a href="/comp/1/noticeList" class="w-100 btn btn-info">공고 관리</a>
+			<a href="/comp/{{sessionComp.userId}}/noticeList" class="w-100 btn btn-info">공고 관리</a>
 			<div class="m-2"></div>
 			<!--
 			<a href="/comp/1/updateForm" class="w-100 btn btn-info">공고 수정</a>
@@ -17,7 +17,7 @@
 			<a href="#" class="w-100 btn btn-info">지원자 내역</a>
 			<div class="m-2"></div>
 			-->
-			<a href="/comp/1/bookmarkList" class="w-100 btn btn-info">지원자 북마크</a>
+			<a href="/comp/1/bookmarkList" class="w-100 btn btn-info">이력서 북마크</a>
 			<div class="m-2"></div> <!-- 지원자를 북마크하는건지 이력서를 북마크하는건지 확인 필요 -->
 			<a href="/comp/recommend" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div> <!-- 지원자를 추천하는건지 이력서를 추천하는건지 확인 필요 -->
