--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -65,7 +65,7 @@
 				<div class="collapse navbar-collapse" id="mynavbar">
 					<ul class="navbar-nav me-auto">
 						<li class="nav-item">
-							<a class="nav-link text-white" href="#">채용정보</a>
+							<a class="nav-link text-white" href="/">채용정보</a>
 						</li>
 						<li class="nav-item">
 							{{^sessionComp.compname}}<a class="nav-link text-white" href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
