--- a/src/main/resources/templates/comp/resumeList.mustache
+++ b/src/main/resources/templates/comp/resumeList.mustache
@@ -13,7 +13,7 @@
 		<div class="d-flex justify-content-center">
 			<h5 class="align-self-center">이 공고에 지원한 지원자입니다. :</h5>
 
-			<a href="/notice/{{posting.id}}" class="btn btn-info m-2">
+			<a href="/posting/{{posting.id}}" class="btn btn-info m-2">
 				<div class="">
 					<span class="fw-bold">{{posting.position}}</span>
 					<span class="badge bg-black">D-{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
