--- a/src/main/resources/templates/comp/updateForm.mustache
+++ b/src/main/resources/templates/comp/updateForm.mustache
@@ -5,7 +5,7 @@
 
 
 		
-		<form action="/comp/notice/{{posting.id}}/update" method="post" onsubmit="" class="col-8 container" id="selectform">
+		<form action="/comp/posting/{{posting.id}}/update" method="post" onsubmit="" class="col-8 container" id="selectform">
 			<h1 class="text-center mt-2">공고 수정</h1>
 
 			<!--
