--- a/src/main/resources/templates/comp/saveForm.mustache
+++ b/src/main/resources/templates/comp/saveForm.mustache
@@ -5,7 +5,7 @@
 
 
 		
-		<form action="/comp/notice/save" method="post" onsubmit="" class="col-8 container" id="selectform">
+		<form action="/comp/posting/save" method="post" onsubmit="" class="col-8 container" id="selectform">
 			<h1 class="text-center mt-2">공고 등록</h1>
 
 			<!--
