mustache 및 controller 코드 컨벤션 완료

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -81,7 +81,7 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-white" href="/help">고객센터</a>
+							<a class="nav-link text-white" href="/master/help">고객센터</a>
 						</li>
 					</ul>
 					<form class="d-flex">
