--- a/src/main/resources/templates/user/bookmarkForm.mustache
+++ b/src/main/resources/templates/user/bookmarkForm.mustache
@@ -16,7 +16,7 @@
       <div class="m-2"></div>
       <a href="applyList" class="w-100 btn btn-info">지원내역</a>
       <div class="m-2"></div>
-      <a href="bookMarkForm" class="w-100 btn btn-info">북마크</a>
+      <a href="bookmarkForm" class="w-100 btn btn-info">북마크</a>
       <div class="m-2"></div>
       <a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
       <div class="m-2"></div>
@@ -27,7 +27,7 @@
       {{#postingList }}
       <div class="d-flex border border-info m-3 p-2">
         <div class="col-10">
-          <a href="/comp/notice/{{ id }}"
+          <a href="/comp/posting/{{ id }}"
             ><img
               src="공고사진"
               alt="{{ user.compname }}(
