--- a/src/main/resources/templates/comp/postingList.mustache
+++ b/src/main/resources/templates/comp/postingList.mustache
@@ -13,7 +13,7 @@
 
 			{{#postingList}}
 			<div class="d-flex border border-info m-3 p-2 justify-content-between">
-				<a href="/posting/{{id}}" class="btn btn-info">
+				<a href="/comp/posting/{{id}}" class="btn btn-info">
 					<div class="">
 						<span class="fw-bold">{{position}}</span>
 						<span class="badge bg-black">D-{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
