--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -16,7 +16,7 @@
 			<div class="m-2"></div>
 			<a href="applyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="bookMarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="bookmarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
 			<a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
@@ -24,7 +24,7 @@
 
 
 		<div class="col-9 ms-3">
-			<h1 class="text-center mt-2">MY PAGE</h1>
+			<h1 class="text-center mt-2">마이페이지</h1>
 
 			<div class="d-flex">
 				<div class="m-2 col-4 d-flex flex-column align-items-center">
@@ -33,7 +33,7 @@
 
 				</div>
 
-				<form action="/userUpdate" method="post" enctype="multipart/form-data">
+				<form action="/user/update" method="post" enctype="multipart/form-data">
 
 					<div>
 						<div class="input-group col-6 mb-3">
